Closed Bug 387496 Opened 17 years ago Closed 17 years ago

No focus events when navigating among HTML menu/list items

Categories

(Core :: Disability Access APIs, defect)

x86
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: jdiggs, Assigned: ginnchen+exoracle)

References

(Blocks 2 open bugs)

Details

(Keywords: access)

Attachments

(1 file)

Steps to reproduce: 1. Launch Accerciser and turn event monitoring on 2. Navigate to any page with lists and combo boxes (such as the bugzilla Enter Bug page) 3. Move focus to the list or combo box and then use Up and Down Arrow to navigate among the items. Expected results: Focus events (focus: and state-changed:focused) would be generated. Actual results: Focus events are not generated. This seems to be a regression introduced in the 2007070504 build.
sounds like regression of Bug 279703
Assignee: aaronleventhal → ginn.chen
Blocks: htmla11y
Attached patch patchSplinter Review
QI failed for nsIMenuFrame means it's not on menu bar.
Attachment #272458 - Flags: review?(aaronleventhal)
(In reply to comment #2) > Created an attachment (id=272458) [details] > patch > > QI failed for nsIMenuFrame means it's not on menu bar. > Ginn, would be fine if you add this comment to the patch.
sure, thanks.
Attachment #272458 - Flags: review?(aaronleventhal) → review+
Status: NEW → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: