Bug 387496 No focus events when navigating among HTML menu/list items r=aaronleventhal